# grad_work

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Cargo.toml  Makefile  README.md  cmake_install.cmake  conventions.txt  lisp.cpp  main.cpp  makefile  refactoring.txt  rt.cpp  run  todo.md  todo.org  todo.txt
c/src/: lex.c  main.c
c/src/headers/: buf.h  defs.h  tok.h
docs/: c_func_ptrs.txt  components.org  lisp.org  rationale.txt  used_resources.org
docs/examples/: input.scm  output.cpp
docs/notes/: impl.txt  multi_dispatch.org  parser_syntax.rs  perfomance.html  perfomance.org  perfomance.txt  preprocessor.org  stl_bench.org  to_mention.txt  todo.org  usages.org  used_resources.org
docs/spec/: main_features.org  opts.txt  random_thoughts.org  spec.html
inc/: m_hash.hpp  typedefs.hpp
inc/ast/: nodes.hpp
inc/dbg/: dump.hpp  io.hpp
inc/lexer/: char_type.hpp  parse_val.hpp  token.hpp  token.hpp.autosave  token_stream.hpp  token_stream.hpp.autosave
inc/runtime/core/: types.hpp
inc/runtime/opt/: io.hpp  sum_type.hpp
input/lua/: arith.lua
output/: entry_point.cpp
output/lua/: arith.hpp
resembly/: each.resm
rust_src/base/: lexer.rs  mod.rs  parser.rs
rust_src/env/: announce.rs  mod.rs
rust_src/utils/: box_macro.rs  mod.rs
sandbox/: alt_parsing.cpp  wchar.c
scripts/: tokens_dump_labels.awk
src/: buf.c  dev_assert.hpp  djb2_hash.hpp  echo.hpp  errors.hpp  errors.hpp.autosave  m_hash.hpp  main.cpp  main.rs  makefile  mn_hash.hpp  test.rs  typedefs.hpp
src/app/: CMakeLists.txt  api.cpp  api.hpp  app.cpp  app.hpp
src/ast/: CMakeLists.txt  atoms.cpp  atoms.hpp  bin_ops.cpp  bin_ops.hpp  binary_ops.cpp  binary_ops.hpp  builtins.cpp  builtins.hpp  cond.cpp  cond.hpp  defs.cpp  defs.hpp  global_var.hpp  literal.cpp  literal.hpp  literals.cpp  literals.hpp  node.cpp  node.hpp  stack.cpp  stack.hpp  statements.cpp  statements.hpp  typedefs.hpp  visitor.hpp
src/backend/: README.txt
src/base/: .#reader.rs  byte.rs  compiler.rs  decimal.rs  lexer.rs  lexer_config.rs  mod.rs  reader.rs  real.rs  token.rs
src/cc/: CMakeLists.txt  classifier.cpp  classifier.hpp  code_gen.cpp  code_gen.hpp  fn_check.cpp  fn_check.hpp  parse_lit.cpp  parse_lit.hpp  parser.cpp  parser.hpp  strict_arith.cpp  strict_arith.hpp  top_level.hpp  translation_unit.hpp  type_deducer.cpp  type_deducer.hpp
src/cgen/: mod.rs
src/chars/: CMakeLists.txt  alphabet.cpp  alphabet.hpp  categories.cpp  categories.hpp
src/compiler/: lexer.cpp
src/containers/: char_vec.c  char_vec.h  int_vec.c  int_vec.h  main.c  str_bench.cpp  vec.h  vec_decl_gen.h  vec_impl_gen.h
src/dbg/: CMakeLists.txt  dt.cpp  dt.hpp  io.cpp  lex.cpp  lex.hpp  sym.cpp  sym.hpp
src/di/: CMakeLists.txt  output.cpp  output.hpp  pipe.cpp  pipe.hpp  unit.cpp  unit.hpp
src/dt/: CMakeLists.txt  alist.cpp  alist.hpp  dict.cpp  dict.hpp  hlist.cpp  hlist.hpp  str_view.cpp  str_view.hpp
src/env/: announce.rs  error.rs  mod.rs
src/err/: CMakeLists.txt  abstract_error.cpp  abstract_error.hpp  fatal.hpp  fn_errors.cpp  fn_errors.hpp  io_errors.hpp  lex_errors.cpp  lex_errors.hpp  stx_errors.hpp  sym_errors.cpp  sym_errors.hpp  type_errors.cpp  type_errors.hpp
src/fmt/: CMakeLists.txt  u64.cpp  u64.hpp  uint.cpp  uint.hpp
src/headers/: lex.h
src/intrinsic/: CMakeLists.txt  intrinsic.cpp  intrinsic.hpp  overloadings.cpp  overloadings.hpp  type_ops.cpp  type_ops.hpp
src/io/: CMakeLists.txt  buf.hpp  file_writer.cpp  file_writer.hpp  r_utils.cpp  r_utils.hpp  utils.cpp  utils.hpp  w_utils.cpp  w_utils.hpp
src/lex/: CMakeLists.txt  CTestTestfile.cmake  Makefile  char_case.hpp  char_groups.cpp  char_groups.hpp  char_type.cpp  char_type.hpp  cmake_install.cmake  copy of reader.cpp  copy of reader.hpp  cursor.cpp  cursor.hpp  gen_alphabet.cpp  gen_alphabet.hpp  num_tagger.cpp  num_tagger.hpp  parse_val.cpp  parse_val.hpp  reader.cpp  reader.hpp  token.cpp  token.hpp  token_stream.cpp  token_stream.hpp
src/lexer/: CMakeLists.txt
src/macro/: blame.hpp  or.hpp
src/rodata/: CMakeLists.txt  cstrings.cpp  cstrings.hpp
src/sandbox/: dynamic_type.c  i64_width.c  str_bench.cpp  vec_bench.c  vec_bench.rs
src/stash/: i64_width.rs  panic_match.rs
src/sym/: CMakeLists.txt  attr.hpp  fn.cpp  fn.hpp  func.cpp  func.hpp  generator.cpp  generator.hpp  global.hpp  global_var.hpp  lambda.cpp  lambda.hpp  local.hpp  local_var.hpp  module.cpp  module.hpp  modules.hpp  param.hpp  qualified_id.cpp  qualified_id.hpp  rules.cpp  rules.hpp  scope.cpp  scope.hpp  signature.hpp  struct.cpp  struct.hpp  sym.cpp  sym.hpp  table.hpp  type.cpp  type.hpp  typedefs.hpp
src/translator/: lex.c  main.c
src/unit/: CMakeLists.txt  fns.cpp  fns.hpp  globals.cpp  globals.hpp  scope.cpp  scope.hpp  source.cpp  source.hpp  structs.cpp  structs.hpp  syms.cpp  syms.hpp
src/util/: std_vector.hpp
src/xtern/: CMakeLists.txt  pkg_encode.cpp  pkg_encode.hpp  pkg_encoder.cpp  pkg_encoder.hpp  pkg_fn_encoder.cpp  pkg_fn_encoder.hpp  pkg_parser.cpp  pkg_parser.hpp  pkg_type_encoder.cpp  pkg_type_encoder.hpp
stash/: rng_lexer.rs  str_bench.c  vec_bench.c  vec_bench.cpp
test/lexer/: CMakeLists.txt  quick_test.cpp
tests/: bench_utils.hpp  init_utils.hpp  test_utils.hpp
tests/bench_lex/: CMakeLists.txt  m9_read.cpp
tests/lex/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  quick_test.cpp
tests/test_cc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  suit.hpp  test_cc.cbp  types_deduce.cpp
tests/test_dt/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dt_test.cbp  list.cpp  main.cpp  suit.hpp
tests/test_lex/: CMakeLists.txt  main.cpp  simple_tests.cpp  suite.hpp
tests/test_sym/: CMakeLists.txt  main.cpp  scope.cpp  suit.hpp
(+123 files in other folders)
